--- a/UserInterface/MainWindow1.xaml
+++ b/UserInterface/MainWindow1.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UserInterface.MainWindow"
+﻿<Window x:Class="UserInterface.MainWindow1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -282,7 +282,7 @@
 				</Button>
 				<Label Grid.Column="2" Content="(search by)" FontFamily="Consolas" FontSize="11" VerticalAlignment="Top" HorizontalAlignment="Right" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"  Height="26" Width="98" Foreground="#FF1B1B1B"/>
 			</Grid>
-
+			
 		</Grid>
 
 		<Grid Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2">
