Table windows height changed

--- a/UserInterface/TablesWindow.xaml
+++ b/UserInterface/TablesWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Table Window" Height="800" Width="1000" Background="LightGray" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="Table Window" Height="700" Width="1000" Background="LightGray" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
 
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewModel:TableViewModel}">
@@ -24,9 +24,9 @@
 
     <Grid Background="#FFE6E6E6">
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="720"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="96*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="15"/>
