--- a/UserInterface/View/TableView.xaml
+++ b/UserInterface/View/TableView.xaml
@@ -6,26 +6,59 @@
              xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="900">
-
-    <Grid>
-        <DataGrid x:Name="SubstationItems"
-                  ItemsSource="{Binding SubstationItems, UpdateSourceTrigger=PropertyChanged}"
-                  IsReadOnly="True"
+    <TabControl  HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="900">
+        <TabItem Header="Discrete measurements" Width="450">
+            <Grid>
+                <DataGrid x:Name="Discretes"
+                  ItemsSource="{Binding Discretes, UpdateSourceTrigger=PropertyChanged}"
+                  IsReadOnly="True" HorizontalContentAlignment="Center"
                   VerticalScrollBarVisibility="Auto"
                   BorderThickness="3" BorderBrush="#FF29ABBF"
                   VerticalAlignment="Top"
                   AutoGenerateColumns="False"
                   CanUserResizeRows="False"
+                  CanUserResizeColumns="True"
                   CanUserAddRows="False" Grid.Column="1" Background="White" Grid.Row="1" FontFamily="Calibri" FontSize="14" >
-            <DataGrid.Columns >
-                <DataGridTextColumn Header="Name" Width="*"  Binding="{Binding Name}"/>
-                <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
-                <DataGridTextColumn Header="Value" Width="*" Binding="{Binding Value}"/>
-                <DataGridTextColumn Header="Min" Width="*" Binding="{Binding Min}"/>
-                <DataGridTextColumn Header="Max" Width="*" Binding="{Binding Max}"/>
-                <DataGridTextColumn Header="Time" Width="*" Binding="{Binding Time}"/>
-                <DataGridTextColumn Header="Alarm" Width="*" Binding="{Binding Alarm}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-    </Grid>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}" />
+                        <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
+                        <DataGridTextColumn Header="Type" Width="*" Binding="{Binding Type}"/>
+                        <DataGridTextColumn Header="State" Width="*" Binding="{Binding State}"/>
+                        <DataGridTextColumn Header="Time" Width="*" Binding="{Binding Time}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </TabItem>
+        <TabItem Header="Analog measurements" Width="450">
+            <Grid>
+                <DataGrid x:Name="SubstationItems"
+                  ItemsSource="{Binding Analogs, UpdateSourceTrigger=PropertyChanged}"
+                  IsReadOnly="True" HorizontalContentAlignment="Center"
+                  VerticalScrollBarVisibility="Auto"
+                  BorderThickness="3" BorderBrush="#FF29ABBF"
+                  VerticalAlignment="Top"
+                  AutoGenerateColumns="False"
+                  CanUserResizeRows="False"
+                  CanUserResizeColumns="True"
+                  CanUserAddRows="False" Grid.Column="1" Background="White" Grid.Row="1" FontFamily="Calibri" FontSize="14" >
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Header="Alarm" IsReadOnly="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Image Height="30" Source="..\Assets\alarm-bell.png" Visibility="{Binding AlarmVisibility}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}"/>
+                        <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
+                        <DataGridTextColumn Header="Type" Width="*" Binding="{Binding Type}"/>
+                        <DataGridTextColumn Header="Value" Width="*" Binding="{Binding Value}"/>
+                        <DataGridTextColumn Header="Min Value" Width="*" Binding="{Binding Min}"/>
+                        <DataGridTextColumn Header="Max Value" Width="*" Binding="{Binding Max}"/>
+                        <DataGridTextColumn Header="Time" Width="*" Binding="{Binding Time}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </UserControl>
