--- a/UserInterface/AnalyticsWindow.xaml
+++ b/UserInterface/AnalyticsWindow.xaml
@@ -9,9 +9,12 @@
         xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
         xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:converters="clr-namespace:UserInterface.Converters"
         mc:Ignorable="d"
         Title="Analytics Window" Height="700" Width="1000" Background="LightGray" WindowStartupLocation="CenterScreen">
     <Window.Resources>
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <converters:InvertBooleanConverter x:Key="InvertBooleanConverter"/>
         <DataTemplate DataType="{x:Type viewModel:AnalyticsViewModel}">
             <views:TableView/>
         </DataTemplate>
@@ -41,7 +44,6 @@
         </Style>
     </Window.Resources>
     <Grid Background="#FFE6E6E6">
-
         <wpf:CartesianChart Margin="32,294,31,23" Series="{Binding SeriesCollection}" Foreground="Black" Background="White" LegendLocation="Right">
             <wpf:CartesianChart.AxisX>
                 <wpf:Axis Title="Time" LabelFormatter="{Binding Formatter}" MinValue="{Binding InitialDateTime.Ticks}" MaxValue="{Binding MaxDateTime.Ticks}">
@@ -57,7 +59,7 @@
         <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding SubstationList}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedSubstation, Mode=TwoWay}" Margin="124,77,0,0" VerticalAlignment="Top" Height="24" Width="120" FontFamily="Calibri"/>
         <Label Content="Subsation:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" Margin="40,76,0,0" VerticalAlignment="Top" FontFamily="Calibri" Width="81" Foreground="Black" FontSize="13" RenderTransformOrigin="0.5,0.385"/>
         <Label Content="Measurements" HorizontalAlignment="Left" Margin="32,114,0,0"  HorizontalContentAlignment="Center" VerticalAlignment="Top" FontFamily="Calibri" Width="144" Foreground="Black" FontSize="20"/>
-        <ListView HorizontalAlignment="Left" ItemsSource="{Binding SignalList}" Height="132" Margin="32,149,0,0" VerticalAlignment="Top" Width="929" Background="White" BorderBrush="Black" BorderThickness="2" FontSize="13">
+        <ListView IsEnabled="{Binding IsBussy, Converter={StaticResource InvertBooleanConverter}}" HorizontalAlignment="Left" ItemsSource="{Binding SignalList}" Height="132" Margin="32,149,0,0" VerticalAlignment="Top" Width="929" Background="White" BorderBrush="Black" BorderThickness="2" FontSize="13">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <analytics:SignalListItem/>
@@ -71,6 +73,23 @@
         <Label Content="End date:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" Margin="762,77,0,0" VerticalAlignment="Top" FontFamily="Calibri" Width="92" Foreground="Black" FontSize="13" RenderTransformOrigin="0.457,0.442"/>
         <Label Content="Measure type:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" Margin="283,77,0,0" VerticalAlignment="Top" FontFamily="Calibri" Width="90" Foreground="Black" FontSize="13"/>
         <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding MeasureType}" SelectedItem="{Binding SelectedType, Mode=TwoWay}" Margin="378,77,0,0" VerticalAlignment="Top" Height="24" Width="120" FontFamily="Calibri"/>
-
+        <Border Margin="200" 
+              Visibility="{Binding IsBussy, Converter={StaticResource BooleanToVisibilityConverter}}"
+              Background="White"
+              VerticalAlignment="Center"
+              HorizontalAlignment="Stretch"
+              CornerRadius="5"
+              BorderThickness="2"
+              BorderBrush="Gray">
+            <StackPanel>
+                <Label 
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Center"
+                VerticalContentAlignment="Center"
+                Height="100"
+                Content="Please wait..."/>
+                <ProgressBar Width="300" Height="10" Margin="10" Minimum="0" Maximum="100" Value="{Binding DummyStatus}"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </mah:MetroWindow>
