--- a/UserInterface/View/TableView.xaml
+++ b/UserInterface/View/TableView.xaml
@@ -20,8 +20,21 @@
                   CanUserResizeColumns="True"
                   CanUserAddRows="False" Grid.Column="1" Background="White" Grid.Row="1" FontFamily="Calibri" FontSize="14" >
                     <DataGrid.Columns>
+                        <DataGridTemplateColumn Header="Alarm" IsReadOnly="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Image Height="30" Source="..\Assets\alarm-bell.png" Visibility="{Binding AlarmVisibility}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                         <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}" />
-                        <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
+                        <DataGridTemplateColumn Header="Description" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Description}" TextWrapping="Wrap" ToolTip="{Binding Description}"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                         <DataGridTextColumn Header="Type" Width="*" Binding="{Binding Type}"/>
                         <DataGridTextColumn Header="State" Width="*" Binding="{Binding State}"/>
                         <DataGridTextColumn Header="Time" Width="*" Binding="{Binding Time}"/>
@@ -49,13 +62,19 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}"/>
-                        <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
-                        <DataGridTextColumn Header="Type" Width="*" Binding="{Binding Type}"/>
-                        <DataGridTextColumn Header="Value" Width="*" Binding="{Binding Value}"/>
-                        <DataGridTextColumn Header="Min Value" Width="*" Binding="{Binding Min}"/>
-                        <DataGridTextColumn Header="Max Value" Width="*" Binding="{Binding Max}"/>
-                        <DataGridTextColumn Header="Time" Width="*" Binding="{Binding Time}"/>
+                        <DataGridTextColumn Header="Name" Width="140" Binding="{Binding Name}"/>
+                        <DataGridTemplateColumn Header="Description" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Description}" TextWrapping="Wrap" ToolTip="{Binding Description}"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTextColumn Header="Type" Width="140" Binding="{Binding Type}"/>
+                        <DataGridTextColumn Header="Value" Binding="{Binding Value}"/>
+                        <DataGridTextColumn Header="Min Value" Binding="{Binding Min}"/>
+                        <DataGridTextColumn Header="Max Value" Binding="{Binding Max}"/>
+                        <DataGridTextColumn Header="Time" Binding="{Binding Time}"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
